# MEDPython

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test_publish.yml
dhn_med_py/: med_session.py
dhn_med_py/med_file/: dhnmed_file.c
dhn_medlib/: medlib_m12.c  medlib_m12.h  targets_m12.h
scripts/: parse_medlib_flags.py
src/dhn_med_py/: med_session.py
src/dhn_med_py/med_file/: dhnmed_file.c  dhnmed_file.h
test/: dhn_med_py_test.py
tests/: dhn_med_py_test.py
var_sf.medd/: test.ridx  var_sf.rdat
var_sf.medd/16k_0001.ticd/: 16k_0001.rdat  16k_0001.ridx
var_sf.medd/16k_0001.ticd/16k_0001_s0001.tisd/: 16k_0001_s0001.tdat  16k_0001_s0001.tidx  16k_0001_s0001.tmet
var_sf.medd/16k_0001.ticd/16k_0001_s0002.tisd/: 16k_0001_s0002.tdat  16k_0001_s0002.tidx  16k_0001_s0002.tmet
var_sf.medd/16k_0001.ticd/16k_0001_s0003.tisd/: 16k_0001_s0003.tdat  16k_0001_s0003.tidx  16k_0001_s0003.tmet
var_sf.medd/32k_0001.ticd/: 32k_0001.rdat  32k_0001.ridx
var_sf.medd/32k_0001.ticd/32k_0001_s0001.tisd/: 32k_0001_s0001.tdat  32k_0001_s0001.tidx  32k_0001_s0001.tmet
var_sf.medd/32k_0001.ticd/32k_0001_s0002.tisd/: 32k_0001_s0002.tdat  32k_0001_s0002.tidx  32k_0001_s0002.tmet
var_sf.medd/32k_0001.ticd/32k_0001_s0003.tisd/: 32k_0001_s0003.tdat  32k_0001_s0003.tidx  32k_0001_s0003.tmet
var_sf.medd/40k_0001.ticd/: 40k_0001.rdat  40k_0001.ridx
var_sf.medd/5k_0001.ticd/: 5k_0001.rdat  5k_0001.ridx
var_sf.medd/test.recd/: test_s0001.rdat  test_s0001.ridx
(+18 files in other folders)
